[package]
name = "alpha-makemore-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
indicatif = "0.17.11"
clap = { version = "4.5.32", features = ["derive"] }
alpha-micrograd-rust = { path = "../alpha-micrograd-rust", version = "0.4.0"}

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "nll"
harness = false